RESOLVED FIXED182152
REGRESSION (r221899): Web Content process hangs when webpage tries to make a new window if the WKWebView doesn’t have a UI delegate
https://bugs.webkit.org/show_bug.cgi?id=182152
Summary REGRESSION (r221899): Web Content process hangs when webpage tries to make a ...
mitz
Reported 2018-01-25 15:14:33 PST
rdar://problem/36881934 If the webpage tries to create a new window, and the WKWebView doesn’t have a UI delegate, the Web Content process will hang. This was introduced in <https://trac.webkit.org/r221899> (the change made for bug 176568). It made the base implementation of API::UIClient::createNewPage() just return, instead of calling the completion handler with a null pointer. This leaves the Web Content process blocked waiting indefinitely.
Attachments
Patch (8.33 KB, patch)
2018-01-25 16:43 PST, Alex Christensen
joepeck: review+
Alex Christensen
Comment 1 2018-01-25 16:43:07 PST
Joseph Pecoraro
Comment 2 2018-01-25 17:29:01 PST
Comment on attachment 332335 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=332335&action=review r=me > Tools/TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:100 > + TestWebKitAPI::Util::run(&done); While it might not matter right now, I think you should be setting `done = false` in here so this Util::run really waits for your done condition and not an earlier test's done condition.
Alex Christensen
Comment 3 2018-01-25 17:31:21 PST
Carlos Garcia Campos
Comment 4 2018-01-26 01:19:47 PST
Note You need to log in before you can comment on or make changes to this bug.