REGRESSION (r221899): Web Content process hangs when webpage tries to make a new window if the WKWebView doesn’t have a UI delegate https://bugs.webkit.org/show_bug.cgi?id=182152

Reviewed by Joseph Pecoraro.

Source/WebKit:

Call the completion handler of the default API::UIClient::createNewPage.

* UIProcess/API/APIUIClient.h:
(API::UIClient::createNewPage):
* UIProcess/API/C/WKPage.cpp:
(WKPageSetPageUIClient):
* UIProcess/Cocoa/UIDelegate.h:
* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::createNewPage):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/UIDelegate.mm:
(-[NoUIDelegate webView:decidePolicyForNavigationAction:decisionHandler:]):
(TEST):



Canonical link: https://commits.webkit.org/197976@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227647 268f45cc-cd09-0410-ab3c-d52691b4dbfc